<resources>
    <string name="app_name">Visualize</string>

    <string name="action_settings">Settings</string>

    <!-- - - - - - - - - - - - - - - -
          - Used by Preferences  -
          - - - - - - - - - - - - - - - -->
    <!-- TODO (1) Add Strings for checkbox preference -->
    <string name="pref_show_bass_key" translatable="false">show_bass</string>
    <string name="pref_show_bass_title" translatable="false">Show Bass</string>

    <string name="pref_show_mid_key" translatable="false">show_mid</string>
    <string name="pref_show_mid_title" translatable="false">Show Mid</string>

    <string name="pref_show_treble_key" translatable="false">show_treble</string>
    <string name="pref_show_treble_title" translatable="false">Show Treble</string>


    <string name="pref_show_false" translatable="false">Hidden</string>
    <string name="pref_show_true" translatable="false">Shown</string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>
    <string name="pref_color_blue_value" translatable="false">blue</string>
    <string name="pref_color_green_value" translatable="false">green</string>

    <string name="pref_color_key">show_color_key</string>
    <string name="pref_color_title">Show Color</string>
    <string name="pref_color_default">@string/pref_color_red_value</string>

    <string name="pref_size_key">size_key</string>
    <string name="pref_size_title">Size</string>
    <string name="pref_size_default_value">1</string>
</resources>
