<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_bass_default"
        android:key="@string/pref_show_bass_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_bass_title" />

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_mid_default"
        android:key="@string/pref_show_mid_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_mid_title" />

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_treble_default"
        android:key="@string/pref_show_treble_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_treble_title" />

    <ListPreference
        android:defaultValue="@string/pref_color_default"
        android:entries="@array/color_entry"
        android:entryValues="@array/color_entries_value"
        android:key="@string/pref_color_key"
        android:summary="%s"
        android:title="@string/pref_color_title" />

    <EditTextPreference
        android:defaultValue="@string/pref_size_default_value"
        android:key="@string/pref_size_key"
        android:title="@string/pref_size_title" />

</PreferenceScreen>
